add inline background style with color prop

--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -36,20 +36,12 @@ body {
 
     button {
       width: 25%;
-      border: 1px solid lightgray;
+      border: 1px solid darkgray;
       font-size: 24px;
     }
 
     .wide {
       width: 50%;
-    }
-
-    .light {
-      background-color: #e0e0e0;
-    }
-
-    .dark {
-      background-color: orange;
     }
   }
 }
