--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -8,7 +8,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .display {
@@ -23,11 +23,11 @@ body {
   font-weight: 500;
   padding: 20px 20px;
   -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .button-panel {
@@ -37,8 +37,8 @@ body {
   width: 700px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   color: black;
 }
 
@@ -52,18 +52,10 @@ body {
 
 .button-panel div button {
   width: 25%;
-  border: 1px solid lightgray;
+  border: 1px solid darkgray;
   font-size: 24px;
 }
 
 .button-panel div .wide {
   width: 50%;
-}
-
-.button-panel div .light {
-  background-color: #e0e0e0;
-}
-
-.button-panel div .dark {
-  background-color: orange;
 }
